aile ,finans,hatırlatma,business dashboard endpointleri oluşturuldu fakat test edilmedi.